# personal-agent

./: .gitignore  CONTRIBUTING.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
config/: budget.toml
docs/: PROJECT_LOG.md  STATUS_REPORT_TEMPLATE.md  api_accounts.md  audit.md  content_profiles.md  cost_rules.md  docs_adapter.md  examples_finance_spec.json  examples_leadgen_spec.json  messages_consent.md  messages_parked.md  oauth_device_code_flow.txt  packaging.md  policies.md  prompts_intake_templates.md  prompts_system.md  scheduler.md  secrets.md  skills_finance.md  skills_jobs.md  skills_leadgen.md  skills_social.md  spec_task_envelope.md  stuck_rules.md  tools_catalog.md  wbs.md
memory/: cost_ledger.jsonl
orchestrator/: blueprint.md  docs_adapter.py  planner.py  scheduler.py  service.py
orchestrator/core/: logging.md  models.py  settings.md  types.md  validators.py
orchestrator/cost/: governor.py  ledger.py
orchestrator/intake/: README.md  consent.py  consent_bundle.md  intake_manager.py  iqs.py  mvi.py  questioner.py
runner_windows/: README.md  execution_flow.md  runner.py  setup.ps1
runner_windows/actions/: files_adapter.py  finance_adapter.py  (+3 more)
schedules/: jobs.yaml
tests/: __init__.py  test_actions_files_ocr.py  test_actions_secrets.py  test_actions_web.py  test_budget_enforcement.py  test_cost_governor.py  test_docs_adapter.py  test_finance_adapter.py  test_intake_manager.py  test_orchestrator_service.py  test_planner.py  test_recipes_engine.py  test_runner.py  test_scheduler.py  test_validators.py
(+7 files in other folders)
