[[tool.poetry.source]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.poetry]
name = "personal-agent"
version = "0.1.0"
description = "Personal Agent project with orchestrator and runner"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"